--- a/src/component/cssfol/project.module.css
+++ b/src/component/cssfol/project.module.css
@@ -5,6 +5,7 @@
     color: white;
     background-color: rgba(0, 0, 0, 0.856);
     border-radius: 30px;
+    word-wrap: break-word;
 }
 .con h2{
     font-size: x-large;
